--- a/BTSpringMyBatis/pom.xml
+++ b/BTSpringMyBatis/pom.xml
@@ -68,6 +68,16 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-api</artifactId>
+	        <version>2.3</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>org.apache.logging.log4j</groupId>
+	        <artifactId>log4j-core</artifactId>
+	        <version>2.3</version>
+	    </dependency>
 	</dependencies>
 	<build>
 		<finalName>SpringMybatis</finalName>
